tests/good/tests/bad/testDeclareRedeclaration.grc
// Error: Variable 'x' already declared
x := 10
x := 20 